--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,9 +10,12 @@
 	<body>
 	<div id="content">
   		<%= subtitle %>
+      <br>
   		<%= text %>
   		<br>
   		by <%= author %>
+      <br>
+      Repository Link <%= text %>
   	</div>
 	</body>
 </html>
